# Rustmail

./: .env  Cargo.toml  README.md  configuration.yaml  serde_explanation.md
.github/workflows/: rust.yml
migrations/: 20240713094951_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/routes/: health_check.rs  subscribe.rs
tests/: health_check.rs
zerotoprod/src/: lib.rs
zerotoprod/tests/: heatlh_check.rs
