[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[dependencies]
config="0.13"
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tokio-macros = "2.2"
serde = { version = "1", features = ["derive"] }
log = "0.4.22"


[dependencies.sqlx]
version = "0.6"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
]

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dev-dependencies]
reqwest = "0.11"
